--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             const capitalLetterRegex = /[A-Z]/g;
             const numberRegex = /\d/g;
             const smallLetterRegex = /[a-z]/g;
-            const symbolRegex = /[!@#$%^&*()_+{}\[\]:;<>,.?~\-]/g;
+            const symbolRegex = /[`!@#$%^&*()_+{}\[\]:;<>,.?~\-"']/g;
 
             const capitalLetters = password.match(capitalLetterRegex);
             const numbers = password.match(numberRegex);
