--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
     <h2>Password Validation</h2>
-    <input type="text" id="passwordInput" onkeyup="validatePassword()">
+    <input type="password" id="passwordInput" onkeyup="validatePassword()">
     <p id="passwordMessage"></p>
     
     <script>
@@ -31,7 +31,6 @@
                 ? alert("Password is correct.")
                 : "Password must have at least 3 capital letters, 3 numbers, 2 small letters, and 1 symbol."
             document.getElementById("passwordMessage").textContent = message
-    
         }
     </script>
 </body>
